--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <h1 class="sub-title">About Me</h1>
                 <p>My name is Afsana Alam Trisha. I am a student and a programmer. I have participated in National Programming Contests, which has motivated me
 more to way of competitive programming. By working on some academic projects I have understand that
-I am interested in both designing and developing. 
+I am interested in both designing and developing. <br>
 I love to work in Challenging environment, which makes me develop and encourage myself everyday.
-I live with the motto that I wake up with new oppotunities everyday and a life without
-challenges and work is not my type of world. </p>
+I live with the motto that I wake up with new oppotunities everyday and I don't want to lead a life without
+challenges and work. <br> </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links"  onclick="opentab('education')">Education</p>
