--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@ challenges and work. <br> </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links"  onclick="opentab('education')">Education</p>
+                        <p class="tab-links"  onclick="opentab('experience')">Experience</p>
 
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Front End</span><br>Designing Client-side Interfaces</li>
                             <li><span>Back End</span><br>Developing Server-side</li>
+                            <li><span>Programming Language Skill</span><br>Developing Server-side</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
