--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@ challenges and work. <br> </p>
                             <li><span>Front End</span><br>Designing Client-side Interfaces</li>
                             <li><span>Back End</span><br>Developing Server-side</li>
                             <li><span>Programming Language Skill</span><br>Developing Server-side</li>
+                            <ul>
+                                <li>PHP</li>
+                                <li>Codeigniter</li>
+                                <li>Javascript</li>
+                                <li>ASP .NET</li>
+                                <li>C</li>
+                                <li>C++</li>
+                                <li>Additional: MySQL, HTML, CSS, Bootstrap</li>
+                            </ul>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
